Тесты мат. ядра + тесты апи, дебаг
